--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -1,34 +1,36 @@
 <div ng-controller="AuthenticationController">
-  <h3 class="col-md-12 text-center">Or with your account</h3>
-  <div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">
-    <form name="userForm" ng-submit="signin(userForm.$valid)" class="signin" novalidate autocomplete="off">
-      <fieldset>
-        <div class="form-group" show-errors>
-          <label for="username">Username</label>
-          <input type="text" id="username" name="username" class="form-control" ng-model="credentials.username" placeholder="Username" lowercase required>
-          <div ng-messages="userForm.username.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Username is required.</p>
+  <div class="box-auth col-sm-6 col-sm-offset-3">
+    <h3 class="col-md-12 text-center">Đăng nhập</h3>
+    <div class="col-sm-12">
+      <form name="userForm" ng-submit="signin(userForm.$valid)" class="signin" novalidate autocomplete="off">
+        <fieldset>
+          <div class="form-group" show-errors>
+            <label for="username">Tên đăng nhập</label>
+            <input type="text" id="username" name="username" class="form-control" ng-model="credentials.username" placeholder="Tên đăng nhập" required>
+            <div ng-messages="userForm.username.$error" role="alert">
+              <p class="help-block error-text" ng-message="required">Bạn không thể bỏ trống trường này</p>
+            </div>
           </div>
-        </div>
-        <div class="form-group" show-errors>
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" class="form-control" ng-model="credentials.password" placeholder="Password" required>
-          <div ng-messages="userForm.password.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Password is required.</p>
+          <div class="form-group" show-errors>
+            <label for="password">Mật khẩu</label>
+            <input type="password" id="password" name="password" class="form-control" ng-model="credentials.password" placeholder="Mật khẩu" required>
+            <div ng-messages="userForm.password.$error" role="alert">
+              <p class="help-block error-text" ng-message="required">Bạn không thể bỏ trống trường này</p>
+            </div>
           </div>
-        </div>
-        <div class="text-center form-group">
-          <button type="submit" class="btn btn-primary">Sign in</button>
-          &nbsp; or&nbsp;
-          <a ui-sref="authentication.signup">Sign up</a>
-        </div>
-        <div class="text-center forgot-password">
-          <a ui-sref="password.forgot">Forgot your password?</a>
-        </div>
-        <alert type="danger" ng-show="error" class="text-center text-danger">
-          <span ng-bind="error"></span>
-        </alert>
-      </fieldset>
-    </form>
+          <div class="text-center form-group">
+            <button type="submit" class="btn btn-primary">Sign in</button>
+            &nbsp; or&nbsp;
+            <a ui-sref="authentication.signup">Sign up</a>
+          </div>
+          <div class="text-center forgot-password">
+            <a ui-sref="password.forgot">Forgot your password?</a>
+          </div>
+          <alert type="danger" ng-show="error" class="text-center text-danger">
+            <span ng-bind="error"></span>
+          </alert>
+        </fieldset>
+      </form>
+    </div>
   </div>
 </div>
