--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,3 +1,6 @@
-<section ng-controller="HomeController">
+<section ng-controller="HomeController as vm" class="main">
+    <div class="col-md-8">{{vm.auth}}
 
+    </div>
+    <div class="col-md-4"></div>
 </section>
