--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -39,9 +39,12 @@
 <body class="ng-cloak">
   <header ng-include="'/modules/core/client/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
   <section class="content">
-    <section class="container">
-      {% block content %}{% endblock %}
+    <section class="container-fluid">
+      {% block content %}
+      {% endblock %}
     </section>
+  </section>
+  <section class="footer" ng-include="'/modules/core/client/views/footer.client.view.html'">
   </section>
 
   <!--Embedding The User Object-->
