--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -46,7 +46,7 @@
 
 <div class="footer-bottom">
     <div class="container">
-        <p class="pull-left"> Copyright © Footer 2014. All right reserved. </p>
+        <p class="pull-left"> Copyright © TuanNguyen 2014. All right reserved. </p>
         <div class="pull-right">
             <ul class="nav nav-pills payments">
                 <li><i class="fa fa-cc-visa"></i></li>
