--- a/modules/users/client/views/settings/change-profile-picture.client.view.html
+++ b/modules/users/client/views/settings/change-profile-picture.client.view.html
@@ -7,15 +7,15 @@
         </div>
         <div class="text-center form-group" ng-hide="uploader.queue.length">
           <span class="btn btn-default btn-file">
-              Select Image <input type="file" nv-file-select uploader="uploader">
+              Chọn ảnh <input type="file" nv-file-select uploader="uploader">
           </span>
         </div>
         <div class="text-center form-group" ng-show="uploader.queue.length">
-          <button class="btn btn-primary" ng-click="uploadProfilePicture();">Upload</button>
-          <button class="btn btn-default" ng-click="cancelUpload();">Cancel</button>
+          <button class="btn btn-primary" ng-click="uploadProfilePicture();">Tải lên</button>
+          <button class="btn btn-default" ng-click="cancelUpload();">Hủy</button>
         </div>
         <div ng-show="success" class="text-center text-success">
-          <strong>Profile Picture Changed Successfully</strong>
+          <strong>Ảnh đã được cập nhật</strong>
         </div>
         <div ng-show="error" class="text-center text-danger">
           <strong ng-bind="error"></strong>
