--- a/modules/users/client/views/settings/settings.client.view.html
+++ b/modules/users/client/views/settings/settings.client.view.html
@@ -1,21 +1,21 @@
 <section ng-controller="SettingsController">
   <div class="page-header">
-    <h1>Settings</h1>
+    <h1>Cài đặt tài khoản</h1>
   </div>
   <div class="row">
     <nav class="col-sm-3 col-md-3">
       <ul class="nav nav-pills nav-stacked">
         <li ui-sref-active="active">
-          <a ui-sref="settings.profile">Edit Profile</a>
+          <a ui-sref="settings.profile">Sửa tài khoản</a>
         </li>
         <li ui-sref-active="active">
-          <a ui-sref="settings.picture">Change Profile Picture</a>
+          <a ui-sref="settings.picture">Thay đổi ảnh</a>
         </li>
         <li ui-sref-active="active" ng-show="user.provider === 'local'">
-          <a ui-sref="settings.password">Change Password</a>
+          <a ui-sref="settings.password">Thay đổi mật khẩu</a>
         </li>
         <li ui-sref-active="active">
-          <a ui-sref="settings.accounts">Manage Social Accounts</a>
+          <a ui-sref="settings.accounts">Quản lý mạng xã hội</a>
         </li>
       </ul>
     </nav>
