--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,6 +1,9 @@
 <section ng-controller="HomeController as vm" class="main">
-    <div class="col-md-8">{{vm.auth}}
+    <div class="col-md-3">
+        left menu
+    </div>
+    <div class="col-md-9">
+        {{vm.auth}}
 
     </div>
-    <div class="col-md-4"></div>
 </section>
