--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -44,6 +44,7 @@
       {% endblock %}
     </section>
   </section>
+  <div ng-include="'/modules/core/client/views/sidebar.client.view.html'"></div>
   <section class="footer" ng-include="'/modules/core/client/views/footer.client.view.html'">
   </section>
 
