--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1,11 +1,11 @@
 body{
-  overflow-x: hidden;
+
 }
 .navbar-inverse{
   background: #24292e !important;
 }
 .content {
-  padding-top: 50px;
+  padding-top: 20px;
   -webkit-font-smoothing: antialiased;
   font-family: 'Playfair Display', serif;
 }
@@ -74,79 +74,8 @@ input{
                     SIDEBAR
  -------------------------------------------------*/
 
-div.pre{
-  background-color: #f5f5f5;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  display: inline-block;
-  padding: 10px 30px;
-}
-xmp{
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  font-size: 11px;
-}
-button{ margin-top: 50px}
-.description{
-  display: inline-block;
-  width: 100%;
-  margin: 10px 0;
-}
+@media screen and (max-width: 992px){
 
-.aside-menu{
-  background-color: #28374f;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  z-index: 0;
-  overflow: hidden;
-  min-height: 100%;
-  max-height: 100%;
-  width: 275px;
-  display: block;
-}
-
-.open{
-  display: block;
-}
-
-
-.aside-menu-content{
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  overflow: hidden;
-  -webkit-transform: none;
-  transform: none;
-  z-index: 1;
-}
-.aside-menu-animate{
-  -webkit-transition: -webkit-transform 400ms ease;
-  transition: transform 400ms ease;
-}
-
-.aside-back-drop{
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 99;
-  background: #000000;
-  opacity: 0;
-  -webkit-transition: opacity .15s linear;
-  -o-transition: opacity .15s linear;
-  transition: opacity .15s linear;
-}
-
-.aside-back-drop.in{
-  opacity: .1;
 }
 
 /*------------------------------------------------
