--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -44,7 +44,6 @@
       {% endblock %}
     </section>
   </section>
-  <div ng-include="'/modules/core/client/views/sidebar.client.view.html'"></div>
   <section class="footer" ng-include="'/modules/core/client/views/footer.client.view.html'">
   </section>
 
@@ -52,7 +51,7 @@
   <script type="text/javascript">
     var user = {{ user | json | safe }};
   </script>
-
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <script src="//static.opentok.com/v2/js/opentok.min.js" type="text/javascript" charset="utf-8"></script>
 
   <!--Load The Socket.io File-->
