--- a/modules/core/client/views/addGroupModal.html
+++ b/modules/core/client/views/addGroupModal.html
@@ -24,18 +24,12 @@
                       Chọn ảnh <input type="file" nv-file-select uploader="vm.uploader">
                     </span>
                 </div>
-                <div ng-show="vm.success" class="text-center text-success">
-                    <strong>Ảnh đã được cập nhật</strong>
-                </div>
-                <div ng-show="vm.error" class="text-center text-danger">
-                    <strong ng-bind="vm.error"></strong>
-                </div>
             </div>
             <div class="col-md-10">
                 <div class="row">
                     <div class="form-group col-md-12">
-                        <label class="required">Tên lớp học</label>
-                        <input type="text" ng-model="vm.group.name" class="form-control">
+                        <label class="required">Tên lớp học *</label>
+                        <input type="text" ng-model="vm.group.groupName" class="form-control">
                     </div>
                 </div>
                 <div class="row">
@@ -47,6 +41,18 @@
                                 <div>
                                     <span ng-bind="teacher.displayName | highlight: $select.search"></span>
                                     &lt;<span ng-bind="teacher.email | highlight: $select.search"></span>&gt;
+                                </div>
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label>Thêm học sinh</label>
+                        <ui-select multiple required ng-model="vm.group.students" tagging-label="false" theme="bootstrap" tagging-tokens=",|/" comma-on-blur>
+                            <ui-select-match placeholder="Chọn hoặc tìm kiếm học sinh">{{$item.displayName}} &lt;{{$item.email}}&gt;</ui-select-match>
+                            <ui-select-choices repeat="student in vm.students | filter: $select.search">
+                                <div>
+                                    <span ng-bind="student.displayName | highlight: $select.search"></span>
+                                    &lt;<span ng-bind="student.email | highlight: $select.search"></span>&gt;
                                 </div>
                             </ui-select-choices>
                         </ui-select>
