--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -1,8 +1,8 @@
 <div ng-controller="AuthenticationController">
   <div class="col-md-8 text-center text-md-left signup-text">
-      <h1 class="size-45 text-white signup-h1">Built for developers</h1>
+      <h1 class="size-45 text-white signup-h1">EClass</h1>
       <p class="size-21 mb-4">
-        GitHub is a development platform inspired by the way you work. From <a href="/open-source" class="text-white jumbotron-link">open source</a> to <a href="/business" class="text-white jumbotron-link">business</a>, you can host and review code, manage projects, and build software alongside millions of other&nbsp;developers.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur corporis dolores enim minus molestias obcaecati quidem quisquam, reprehenderit similique ullam! Adipisci deserunt magni minus nam natus obcaecati quaerat sunt voluptatum?
       </p>
   </div>
   <div class="col-md-4 box-auth">
@@ -31,7 +31,7 @@
             </div>
           </div>
           <div class="form-group" show-errors>
-            <label for="username">Tên hiển thị *</label>
+            <label for="username">Tên đăng nhập *</label>
             <input type="text" id="username" name="username" class="form-control" ng-model="credentials.username" placeholder="Tên đăng nhập" required>
             <div ng-messages="userForm.username.$error" role="alert">
               <p class="help-block error-text" ng-message="required">Bạn không được để trống trường này.</p>
