--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -35,7 +35,7 @@
             </div>
             <div class="panel panel-info">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Lớp học đã tham gia</h3>
+                    <h3 class="panel-title">Lớp học đã tham dự</h3>
                 </div>
                 <div class="panel-body" style="padding: 0">
                     <div ng-repeat="group in vm.groupJoined|orderBy:'createdAt'|limitTo: vm.joinedLength">
