--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,5 +1,8 @@
 <section ng-controller="HomeController as vm" class="main">
     <div class="row">
+        <div class="col-md-1">
+
+        </div>
         <div class="col-md-3">
             <div class="panel panel-default">
                 <div class="panel-body" style="padding: 10px 5px">
@@ -54,7 +57,7 @@
             </div>
         </div>
 
-        <div class="col-md-8">
+        <div class="col-md-7">
             <div class="panel panel-success">
                 <div class="panel-heading">
                     <h3 class="panel-title">Panel title</h3>
