--- a/modules/group/client/views/group.client.view.html
+++ b/modules/group/client/views/group.client.view.html
@@ -1,6 +1,8 @@
 <section ng-controller="GroupController as vm" class="main">
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-sm-1">
+    </div>
+    <div class="col-sm-3">
       <div class="panel panel-default">
         <div class="panel-body" style="padding: 10px 5px">
           <div class="row">
@@ -8,7 +10,7 @@
               <img ng-src="{{vm.auth.user.profileImageURL}}" class="img-thumbnail" alt="{{vm.auth.user.displayName}}" width="100%" style="width: 100%; max-height:230px">
             </div>
             <div class="info col-xs-8">
-              <p style="font-size: 20px"><a href="/settings/profile">Hi, {{vm.auth.user.displayName}}</a></p>
+              <p style="font-size: 17px"><a href="/settings/profile">Hi, {{vm.auth.user.displayName}}</a></p>
               <p>{{vm.auth.user.roles === 'student'? 'Học viên': 'Giáo viên'}}</p>
             </div>
           </div>
@@ -16,15 +18,20 @@
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-
+          <h3 style="font-size: 19px; margin: 0">Thông tin lớp học</h3>
         </div>
         <div class="panel-body">
-          {{vm.groupInfo}}
+          <div class="form-group text-center" style="border: 1px solid #ddd;padding: 5px">
+            <img ng-src="{{vm.groupInfo.image?vm.groupInfo.image:'modules/group/client/img/profile/default.png'}}" alt="Class Logo" class="img-thumbnail" style="border: none;max-height: 250px; min-height:150px">
+          </div>
+          <div class="info">
+            <p class="text-center">Lớp: <span style="color: #000; font-size: 16px">{{vm.groupInfo.groupName}}</span></p>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="col-md-8">
+    <div class="col-sm-7">
       <div class="panel panel-success">
         <div class="panel-heading">
           <h3 class="panel-title">Panel title</h3>
@@ -34,7 +41,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-1">
+    <div class="col-sm-1">
 
     </div>
   </div>
