--- a/modules/users/client/views/settings/settings.client.view.html
+++ b/modules/users/client/views/settings/settings.client.view.html
@@ -1,9 +1,12 @@
 <section ng-controller="SettingsController" class="main">
-  <div class="page-header">
-    <h1>Cài đặt tài khoản</h1>
-  </div>
-  <div class="row">
-      <div class="panel panel-default col-sm-3" style="padding: 0">
+    <div class="page-header">
+        <div class="col-md-1"></div>
+        <h1>Cài đặt tài khoản</h1>
+    </div>
+    <div class="row">
+        <div class="col-md-1"></div>
+
+        <div class="panel panel-default col-sm-2" style="padding: 0">
           <div class="panel-body"  style="padding: 0">
               <nav>
                   <ul class="nav nav-pills nav-stacked">
@@ -23,10 +26,11 @@
               </nav>
           </div>
       </div>
-      <div class="panel panel-default col-sm-9 settings-view">
+      <div class="panel panel-default col-sm-8 settings-view">
           <div class="panel-body">
                   <div ui-view></div>
           </div>
       </div>
-  </div>
+        <div class="col-md-1"></div>
+    </div>
 </section>
