--- a/modules/users/client/views/settings/settings.client.view.html
+++ b/modules/users/client/views/settings/settings.client.view.html
@@ -1,10 +1,10 @@
 <section ng-controller="SettingsController" class="main">
     <div class="page-header">
-        <div class="col-md-1"></div>
+        <div class="col-sm-1"></div>
         <h1>Cài đặt tài khoản</h1>
     </div>
     <div class="row">
-        <div class="col-md-1"></div>
+        <div class="col-sm-1"></div>
 
         <div class="panel panel-default col-sm-2" style="padding: 0">
           <div class="panel-body"  style="padding: 0">
@@ -26,11 +26,12 @@
               </nav>
           </div>
       </div>
-      <div class="panel panel-default col-sm-8 settings-view">
+        <div class="col-sm-1"></div>
+      <div class="panel panel-default col-sm-7 settings-view">
           <div class="panel-body">
                   <div ui-view></div>
           </div>
       </div>
-        <div class="col-md-1"></div>
+        <div class="col-sm-1"></div>
     </div>
 </section>
