--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -13,6 +13,28 @@ body{
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
+.nav-tabs {
+  margin: 0 -15px;
+  border-bottom: 1px solid #fff;
+  cursor: pointer;
+}
+.list-heading{
+  padding: 10px 15px;
+  background: grey;
+  color: #fff;
+}
+.list-group {
+  border-radius: 0;
+}
+.list-group-item:first-child {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.list-group-item:last-child {
+  margin-bottom: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
 .undecorated-link:hover {
   text-decoration: none;
 }
