--- a/modules/group/client/views/group.client.view.html
+++ b/modules/group/client/views/group.client.view.html
@@ -1,13 +1,13 @@
 <section ng-controller="GroupController as vm" class="main">
   <div class="row">
-    <div class="col-sm-1">
+    <div class="col-md-1 hidden-sm">
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 col-md-2">
       <div class="panel panel-default">
         <div class="panel-body" style="padding: 10px 5px">
           <div class="row">
             <div class="col-xs-4">
-              <img ng-src="{{vm.auth.user.profileImageURL}}" class="img-thumbnail" alt="{{vm.auth.user.displayName}}" width="100%" style="width: 100%; max-height:230px">
+              <img ng-src="{{vm.auth.user.profileImageURL?vm.auth.user.profileImageURL:'/modules/users/client/img/profile/default.png'}}" class="img-thumbnail" alt="{{vm.auth.user.displayName}}" width="100%" style="width: 100%; max-height:230px">
             </div>
             <div class="info col-xs-8">
               <p style="font-size: 17px"><a href="/settings/profile">Hi, {{vm.auth.user.displayName}}</a></p>
@@ -18,30 +18,59 @@
       </div>
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h3 style="font-size: 19px; margin: 0">Thông tin lớp học</h3>
+          <h3 style="font-size: 19px; margin: 0">{{vm.groupInfo.groupName}} <button ng-if="vm.groupInfo.createdBy == vm.auth.user._id" style="border: 0; background: none" ui-sref="group.setting" class="pull-right"><span class="fas fa-pencil-alt"></span></button></h3>
         </div>
-        <div class="panel-body">
+        <div class="panel-body" style="overflow: hidden">
           <div class="form-group text-center" style="border: 1px solid #ddd;padding: 5px">
             <img ng-src="{{vm.groupInfo.image?vm.groupInfo.image:'modules/group/client/img/profile/default.png'}}" alt="Class Logo" class="img-thumbnail" style="border: none;max-height: 250px; min-height:150px">
           </div>
           <div class="info">
-            <p class="text-center">Lớp: <span style="color: #000; font-size: 16px">{{vm.groupInfo.groupName}}</span></p>
+            <p class="text-left">Code: <span style="color: #000; font-size: 1em;">{{vm.groupInfo.secretCode}}</span>
+              <button ng-if="vm.groupInfo.createdBy == vm.auth.user._id" style="border: 0; background: none" ng-click="vm.resetCode()" class="pull-right"><span class="fas fa-history"></span></button>
+            </p>
+            <div class="nav-tabs">
+              <div class="list-heading">
+                  Học viên
+                <span class="pull-right"><i class="fa fa-angle-right"></i></span>
+              </div>
+            </div>
+            <div class="nav-tabs">
+              <div class="list-heading">
+                Giáo viên
+                <span class="pull-right"><i class="fa fa-angle-right"></i></span>
+              </div>
+            </div>
+            <div class="nav-tabs">
+              <div class="list-heading">
+                Tài liệu
+                <span class="pull-right"><i class="fa fa-angle-right"></i></span>
+              </div>
+            </div>
+            <div class="nav-tabs">
+              <div class="list-heading">
+                Bài giảng video
+                <span class="pull-right"><i class="fa fa-angle-right"></i></span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="col-sm-7">
+    <div class="col-sm-6 col-md-6">
+      <div ui-view></div>
+    </div>
+    <div class="col-md-2 col-sm-3">
       <div class="panel panel-success">
         <div class="panel-heading">
           <h3 class="panel-title">Panel title</h3>
         </div>
         <div class="panel-body">
-
+          Panel body ...
         </div>
       </div>
     </div>
-    <div class="col-sm-1">
+    <div class="col-md-1 hidden-sm">
 
     </div>
   </div>
