create pages ui-sref

--- a/modules/group/client/views/group-videos.client.view.html
+++ b/modules/group/client/views/group-videos.client.view.html
@@ -1,10 +1,10 @@
-<section ng-controller="GroupSettingController as vm">
+<section ng-controller="GroupVideosController as vm">
     <div class="btn btn-lg btn-warning" style="margin-bottom: 20px"  ui-sref="group.home">
         <span class="fa fa-home"></span> Trang chính
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
-            Panel body ...
+            GroupVideosController
         </div>
     </div>
 </section>
