--- a/modules/group/client/views/group.client.view.html
+++ b/modules/group/client/views/group.client.view.html
@@ -1,8 +1,6 @@
 <section ng-controller="GroupController as vm" class="main">
   <div class="row">
-    <div class="col-md-1 hidden-sm">
-    </div>
-    <div class="col-sm-3 col-md-2">
+    <div class="col-sm-3">
       <div class="panel panel-default">
         <div class="panel-body" style="padding: 10px 5px">
           <div class="row">
@@ -29,25 +27,25 @@
               <button ng-if="vm.groupInfo.createdBy == vm.auth.user._id" style="border: 0; background: none" ng-click="vm.resetCode()" class="pull-right"><span class="fas fa-history"></span></button>
             </p>
             <div class="nav-tabs">
-              <div class="list-heading">
+              <div class="list-heading" ui-sref="group.students">
                   Học viên
                 <span class="pull-right"><i class="fa fa-angle-right"></i></span>
               </div>
             </div>
             <div class="nav-tabs">
-              <div class="list-heading">
+              <div class="list-heading" ui-sref="group.teachers">
                 Giáo viên
                 <span class="pull-right"><i class="fa fa-angle-right"></i></span>
               </div>
             </div>
             <div class="nav-tabs">
-              <div class="list-heading">
+              <div class="list-heading" ui-sref="group.documents">
                 Tài liệu
                 <span class="pull-right"><i class="fa fa-angle-right"></i></span>
               </div>
             </div>
             <div class="nav-tabs">
-              <div class="list-heading">
+              <div class="list-heading" ui-sref="group.videos">
                 Bài giảng video
                 <span class="pull-right"><i class="fa fa-angle-right"></i></span>
               </div>
@@ -60,7 +58,7 @@
     <div class="col-sm-6 col-md-6">
       <div ui-view></div>
     </div>
-    <div class="col-md-2 col-sm-3">
+    <div class="col-sm-3">
       <div class="panel panel-success">
         <div class="panel-heading">
           <h3 class="panel-title">Panel title</h3>
