--- a/modules/group/client/views/group-home.client.view.html
+++ b/modules/group/client/views/group-home.client.view.html
@@ -6,18 +6,52 @@
     <div class="panel-body" style="padding: 0; border-radius:0">
       <div class="col-xs-12" id="new_status">
         <div class="col-xs-12" id="post_content">
-          <text-angular  ta-toolbar="[['bold', 'italics', 'underline', 'strikeThrough', 'ul', 'ol', 'quote', 'insertImage','insertLink', 'charcount']]" ng-model="vm.newPost">
+          <text-angular  ta-toolbar="[['bold', 'italics', 'underline', 'strikeThrough', 'ul', 'ol', 'quote', 'insertImage','insertLink', 'charcount']]" ng-model="vm.newTopic.content">
           </text-angular>
         </div>
         <div class="col-xs-12" id="post_footer">
-          <button class="btn btn-primary pull-right" ng-click="vm.createPost()">Đăng bài viết</button>
+          <div class="checkbox col-xs-6 pull-left">
+          </div>
+          <div class="col-xs-6">
+            <button class="btn btn-primary pull-right" ng-click="vm.createTopic()">Đăng bài viết</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="panel panel-default">
+  <div ng-repeat="topic in vm.topics" class="panel panel-default">
+    <div class="panel-heading">
+      <a>
+        <img ng-src="{{topic.createdBy.profileImageURL?topic.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}" alt="{{topic.createdBy.displayName}}" class="header-profile-image" />
+        {{topic.createdBy.displayName}}
+      </a>
+      <!--<button ng-if="topic.createdBy._id == vm.auth.user._id || vm.auth.user._id == vm.groupInfo.createdBy " class="pull-right" ng-click="vm.hideTopic(topic._id)">hide</button>-->
+    </div>
     <div class="panel-body">
-      Home
+      <div ta-bind ng-model="topic.content"></div>
+      <div class="options">
+        <hr>
+        <div class="post-footer-option col-xs-12">
+          <ul class="list-unstyled">
+            <li><a href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Thích</a></li>
+            <li><a href="#"><i class="glyphicon glyphicon-comment" ng-click="showInput=true"></i> Bình luận</a></li>
+            <li><a href="#"><i class="glyphicon glyphicon-share-alt"></i>Theo dõi</a></li>
+            <li><a href="#"><i class="fa fa-eye" ng-if="topic.createdBy._id == vm.auth.user._id || vm.auth.user._id == vm.groupInfo.createdBy"></i> Ẩn</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="newComment">
+        <hr>
+        <div class="input-group">
+          <input type="text" name="comment" class="form-control" ng-model="comment" title="Bình luận" placeholder="Bình luận">
+          <span class="input-group-btn">
+            <button class="btn btn-secondary" type="button" ng-click="vm.createComment(topic._id, comment)">Gửi</button>
+          </span>
+        </div>
+      </div>
+      <div class="comments">
+
+      </div>
     </div>
   </div>
 </section>
