--- a/modules/group/client/views/group-teachers.client.view.html
+++ b/modules/group/client/views/group-teachers.client.view.html
@@ -1,10 +1,46 @@
 <section ng-controller="GroupTeachersController as vm">
-    <div class="btn btn-lg btn-warning" style="margin-bottom: 20px"  ui-sref="group.home">
-        <span class="fa fa-home"></span> Trang chính
-    </div>
-    <div class="panel panel-default">
+    <div class="panel panel-default user_panel">
+        <div class="panel-heading" style="height: 40px;">
+            <div class="col-xs-3"><h3 class="panel-title">Giáo viên</h3></div>
+            <div class="col-xs-9">
+                <button style="border: 0; background: none" ng-click="vm.addTeacher()" class="pull-right"><span class="fa fa-plus"></span></button>
+            </div>
+        </div>
         <div class="panel-body">
-            GroupTeachersController
+            <div class="table-container">
+                <table class="table-users table" border="0">
+                    <tbody>
+                    <tr>
+                        <td width="10" align="center">
+                            <i class="fa fa-2x fa-user fw"></i>
+                        </td>
+                        <td>
+                            John Smith<br><i class="fa fa-envelope"></i>
+                        </td>
+                        <td>
+                            Builder Admin
+                        </td>
+                        <td align="center">
+                            Last Login:  6/14/2017<br><small class="text-muted">2 days ago</small>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td width="10">
+                            <img class="pull-left img-circle nav-user-photo" width="50" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxhcCYW4QDWMOjOuUTxOd50KcJvK-rop9qE9zRltSbVS_bO-cfWA" />  
+                        </td>
+                        <td>
+                            Herbert Hoover<br><i class="fa fa-envelope"></i>
+                        </td>
+                        <td>
+                            Builder Sales Agent
+                        </td>
+                        <td align="center">
+                            Last Login:  6/10/2017<br><small class="text-muted">5 days ago</small>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </section>
