--- a/modules/group/client/views/group.client.view.html
+++ b/modules/group/client/views/group.client.view.html
@@ -27,6 +27,12 @@
               <button ng-if="vm.groupInfo.createdBy == vm.auth.user._id" style="border: 0; background: none" ng-click="vm.resetCode()" class="pull-right"><span class="fas fa-history"></span></button>
             </p>
             <div class="nav-tabs">
+              <div class="list-heading" ui-sref="group.home">
+                  Trang chủ
+                <span class="pull-right"><i class="fa fa-angle-right"></i></span>
+              </div>
+            </div>
+            <div class="nav-tabs">
               <div class="list-heading" ui-sref="group.students">
                   Học viên
                 <span class="pull-right"><i class="fa fa-angle-right"></i></span>
