--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -1,48 +1,48 @@
-<div class="footer" id="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4 col-xs-6">
-                <h3> Lorem Ipsum </h3>
-                <ul>
-                    <li> <a href="#"> Lorem Ipsum </a> </li>
-                    <li> <a href="#"> Lorem Ipsum </a> </li>
-                    <li> <a href="#"> Lorem Ipsum </a> </li>
-                    <li> <a href="#"> Lorem Ipsum </a> </li>
-                </ul>
-            </div>
-            <div class="col-sm-4 col-xs-6">
-                <h3> Lorem Ipsum </h3>
-                <ul>
-                    <li> <a href="#"> Lorem Ipsum </a> </li>
-                    <li> <a href="#"> Lorem Ipsum </a> </li>
-                    <li> <a href="#"> Lorem Ipsum </a> </li>
-                    <li> <a href="#"> Lorem Ipsum </a> </li>
-                </ul>
-            </div>
-            <div class="col-sm-4 col-xs-12 ">
-                <h3> Lorem Ipsum </h3>
-                <ul>
-                    <li>
-                        <div class="input-append newsletter-box text-center">
-                            <input type="text" class="full text-center" placeholder="Email ">
-                            <button class="btn  bg-gray" type="button"> Lorem ipsum <i class="fa fa-long-arrow-right"> </i> </button>
-                        </div>
-                    </li>
-                </ul>
-                <ul class="social">
-                    <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
-                    <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
-                    <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
-                    <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>
-                    <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
-                </ul>
-            </div>
-        </div>
-        <!--/.row-->
-    </div>
-    <!--/.container-->
-</div>
-<!--/.footer-->
+<!--<div class="footer" id="footer">-->
+    <!--<div class="container">-->
+        <!--<div class="row">-->
+            <!--<div class="col-sm-4 col-xs-6">-->
+                <!--<h3> Lorem Ipsum </h3>-->
+                <!--<ul>-->
+                    <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
+                    <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
+                    <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
+                    <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
+                <!--</ul>-->
+            <!--</div>-->
+            <!--<div class="col-sm-4 col-xs-6">-->
+                <!--<h3> Lorem Ipsum </h3>-->
+                <!--<ul>-->
+                    <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
+                    <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
+                    <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
+                    <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
+                <!--</ul>-->
+            <!--</div>-->
+            <!--<div class="col-sm-4 col-xs-12 ">-->
+                <!--<h3> Lorem Ipsum </h3>-->
+                <!--<ul>-->
+                    <!--<li>-->
+                        <!--<div class="input-append newsletter-box text-center">-->
+                            <!--<input type="text" class="full text-center" placeholder="Email ">-->
+                            <!--<button class="btn  bg-gray" type="button"> Lorem ipsum <i class="fa fa-long-arrow-right"> </i> </button>-->
+                        <!--</div>-->
+                    <!--</li>-->
+                <!--</ul>-->
+                <!--<ul class="social">-->
+                    <!--<li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>-->
+                    <!--<li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>-->
+                    <!--<li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>-->
+                    <!--<li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>-->
+                    <!--<li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>-->
+                <!--</ul>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--&lt;!&ndash;/.row&ndash;&gt;-->
+    <!--</div>-->
+    <!--&lt;!&ndash;/.container&ndash;&gt;-->
+<!--</div>-->
+<!--&lt;!&ndash;/.footer&ndash;&gt;-->
 
 <div class="footer-bottom">
     <div class="container">
