--- a/modules/group/client/css/group.css
+++ b/modules/group/client/css/group.css
@@ -143,3 +143,10 @@ i {  vertical-align: middle; }
 .nav-user-photo {
     vertical-align: middle;
 }
+.user_name{
+    font-size:14px;
+    font-weight: bold;
+}
+.comments-list .media{
+    border-bottom: 1px dotted #ccc;
+}
