--- a/modules/group/client/views/group-home.client.view.html
+++ b/modules/group/client/views/group-home.client.view.html
@@ -25,6 +25,7 @@
         <img ng-src="{{topic.createdBy.profileImageURL?topic.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}" alt="{{topic.createdBy.displayName}}" class="header-profile-image" />
         {{topic.createdBy.displayName}}
       </a>
+      <span class="pull-right">{{vm.getTimeAgo(topic.createdAt)}}</span>
       <!--<button ng-if="topic.createdBy._id == vm.auth.user._id || vm.auth.user._id == vm.groupInfo.createdBy " class="pull-right" ng-click="vm.hideTopic(topic._id)">hide</button>-->
     </div>
     <div class="panel-body">
@@ -33,7 +34,7 @@
         <hr>
         <div class="post-footer-option col-xs-12">
           <ul class="list-unstyled">
-            <li><a href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Thích</a> <span>(30)</span></li>
+            <li><a href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Thích</a> <span>({{topic.like?topic.like:'0'}})</span></li>
             <li><a href="#"><i class="fa fa-sticky-note"></i> Note</a></li>
             <li><a href="#" ng-click="vm.hideTopic(topic._id)"><i class="fa fa-eye" ng-if="topic.createdBy._id == vm.auth.user._id || vm.auth.user._id == vm.groupInfo.createdBy"></i> Ẩn</a></li>
           </ul>
@@ -56,16 +57,24 @@
             </div>
             <div class="comments-list" ng-repeat="comment in topic.comments |  orderBy:'-createdAt' | limitTo: 5" style="padding-top: 10px">
               <div class="media">
-                <div class="col-xs-1">
-                  <img ng-src="{{comment.createdBy.profileImageURL?comment.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}" alt="{{comment.createdBy.displayName}}" class="header-profile-image"/>
+                <div class="row comment-info">
+                  <div class="col-xs-6">
+                    <img ng-src="{{comment.createdBy.profileImageURL?comment.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}" alt="{{comment.createdBy.displayName}}" class="header-profile-image"/>
+                    <a href="#">
+                      {{comment.createdBy.displayName}}
+                    </a>
+                  </div>
+                  <div class="col-xs-6 pull-right text-right">
+                    <span class="time-ago">{{vm.getTimeAgo(comment.createdAt)}}</span>
+                  </div>
                 </div>
-                <div class="col-xs-11">
-                  <a href="#">
-                    {{comment.createdBy.displayName}}
-                  </a>
-                  {{comment.content}}
-
-                  <p><small><a href="#" ng-click="">Thích </a><span>({{comment.like}})</span></small></p>
+                <div class="comment-content">
+                  <div class="col-xs-12">
+                    {{comment.content}}
+                  </div>
+                  <div class="action col-xs-12">
+                    <p><small><a href="#" ng-click="">Thích </a><span>({{comment.like}})</span></small></p>
+                  </div>
                 </div>
                 </div>
               </div>
@@ -95,7 +104,7 @@
       <hr>
       <div class="post-footer-option col-xs-12">
         <ul class="list-unstyled">
-          <li><a href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Thích</a> <span>(30)</span></li>
+          <li><a href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Thích</a> <span>({{vm.topic.like?vm.topic.like:'0'}})</span></li>
           <li><a href="#"><i class="fa fa-sticky-note"></i> Note</a></li>
           <li><a href="#" ng-click="vm.hideTopic(vm.topic._id)"><i class="fa fa-eye" ng-if="vm.topic.createdBy._id == vm.auth.user._id || vm.auth.user._id == vm.groupInfo.createdBy"></i> Ẩn</a></li>
         </ul>
@@ -118,16 +127,24 @@
           </div>
           <div class="comments-list" ng-repeat="comment in vm.topic.comments |  orderBy:'-createdAt'" style="padding-top: 10px">
             <div class="media">
-              <div class="col-xs-1">
-                <img ng-src="{{comment.createdBy.profileImageURL?comment.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}" alt="{{comment.createdBy.displayName}}" class="header-profile-image"/>
+              <div class="row comment-info">
+                <div class="col-xs-6">
+                  <img ng-src="{{comment.createdBy.profileImageURL?comment.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}" alt="{{comment.createdBy.displayName}}" class="header-profile-image"/>
+                  <a href="#">
+                    {{comment.createdBy.displayName}}
+                  </a>
+                </div>
+                <div class="col-xs-6 pull-right text-right">
+                  <span class="time-ago">{{vm.getTimeAgo(comment.createdAt)}}</span>
+                </div>
               </div>
-              <div class="col-xs-11">
-                <a href="#">
-                  {{comment.createdBy.displayName}}
-                </a>
-                {{comment.content}}
-
-                <p><small><a href="#" ng-click="">Thích </a><span>({{comment.like}})</span></small></p>
+              <div class="comment-content">
+                <div class="col-xs-12">
+                  {{comment.content}}
+                </div>
+                <div class="action col-xs-12">
+                  <p><small><a href="#" ng-click="">Thích </a><span>({{comment.like}})</span></small></p>
+                </div>
               </div>
             </div>
           </div>
