--- a/modules/group/client/views/group-students.client.view.html
+++ b/modules/group/client/views/group-students.client.view.html
@@ -10,32 +10,18 @@
             <div class="table-container">
                 <table class="table-users table" border="0">
                     <tbody>
-                    <tr>
+                    <tr ng-repeat="data in vm.students">
                         <td width="10" align="center">
-                            <i class="fa fa-2x fa-user fw"></i>
+                            <img class="pull-left img-circle nav-user-photo" width="50" ng-src="{{data.student.profileImageURL?data.student.profileImageURL:'/modules/users/client/img/profile/default.png'}}" />  
                         </td>
                         <td>
-                            John Smith<br><i class="fa fa-envelope"></i>
+                            {{data.student.displayName}}
                         </td>
                         <td>
-                            Builder Admin
+                            {{data.student.email}}
                         </td>
                         <td align="center">
-                            Last Login:  6/14/2017<br><small class="text-muted">2 days ago</small>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td width="10">
-                            <img class="pull-left img-circle nav-user-photo" width="50" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxhcCYW4QDWMOjOuUTxOd50KcJvK-rop9qE9zRltSbVS_bO-cfWA" />  
-                        </td>
-                        <td>
-                            Herbert Hoover<br><i class="fa fa-envelope"></i>
-                        </td>
-                        <td>
-                            Builder Sales Agent
-                        </td>
-                        <td align="center">
-                            Last Login:  6/10/2017<br><small class="text-muted">5 days ago</small>
+                            Điểm:  {{data.point?data.point: 'Chưa có'}}
                         </td>
                     </tr>
                     </tbody>
@@ -44,3 +30,30 @@
         </div>
     </div>
 </section>
+
+
+<script type="text/ng-template" id="add-students-modal.html">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="vm.close()"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Thêm học sinh</h4>
+    </div>
+    <div class="modal-body">
+        <div class="row">
+            <div class="form-group col-md-12">
+                <ui-select multiple required ng-model="vm.add" tagging-label="false" theme="bootstrap" tagging-tokens=",|/" comma-on-blur>
+                    <ui-select-match placeholder="Chọn hoặc tìm kiếm học viên">{{$item.displayName}} &lt;{{$item.email}}&gt;</ui-select-match>
+                    <ui-select-choices repeat="student in vm.students | filter: $select.search">
+                        <div>
+                            <span ng-bind="student.displayName | highlight: $select.search"></span>
+                            &lt;<span ng-bind="student.email | highlight: $select.search"></span>&gt;
+                        </div>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer text-right">
+        <button class="btn btn-success" ng-disabled="!vm.add.length" ng-click="vm.save()">Thêm học viên</button>
+        <button class="btn btn-default" ng-click="vm.close()">Đóng</button>
+    </div>
+</script>
