--- a/modules/group/client/views/group-documents.client.view.html
+++ b/modules/group/client/views/group-documents.client.view.html
@@ -1,7 +1,33 @@
 <section ng-controller="GroupDocumentsController as vm">
     <div class="panel panel-default">
         <div class="panel-body">
-            GroupDocumentsController
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-xs-2 col-md-2">
+                            <img src="http://placehold.it/80" class="img-circle img-responsive" alt="" /></div>
+                        <div class="col-xs-9 col-md-9">
+                            <div>
+                                <a href="http://www.jquery2dotnet.com/2013/10/google-style-login-page-desing-usign.html">
+                                    Google Style Login Page Design Using Bootstrap</a>
+                                <div class="mic-info">
+                                    By: <a href="#">Bhaumik Patel</a> on 2 Aug 2013
+                                </div>
+                            </div>
+                            <div class="comment-text">
+                                Awesome design
+                            </div>
+                        </div>
+                        <div class="col-xs-1">
+                            <div class="action">
+                                <button type="button" class="btn btn-success btn-xs" title="Download">
+                                    <span class="glyphicon glyphicon-save"></span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
         </div>
     </div>
 </section>
